# MondrUI-demo

./: AGENTS.md  README.md  ai.py  integration_demo.py  log_callback_handler.py  main.py  mondrui.py  mondrui_article.md  pyproject.toml  render_ui.py  test_mondrui.py  verify_ai_components.py
.github/: instructions.md
ai_reports/: IMPLEMENTATION_SUMMARY.md  MONDRUI_IMPLEMENTATION.md
verification/: verify_new_components.py
