[project]
name = "mondrui-demo"
version = "0.1.0"
description = "Demo of Conversational UI, where the AI will be creating the UI while communicating with the user"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-core>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "nicegui>=2.21.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.5",
]
